# nijika_bot

./: .gitignore  Cargo.toml
src/: main.rs
